--- a/index.html
+++ b/index.html
@@ -3,16 +3,110 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <title>Typographix Blog</title>
     <!-- Grab Favicon from Google -->
     <link rel="icon" type="image/png" href="https://www.google.com/s2/u/0/favicons?domain=jacinto.design">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
     <!-- Stylesheet -->
+    <link rel="stylesheet" href="scrollbar.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Sticky Navbar -->
+    <nav id="navbar">
+        <div class="nav-left">
+            <h1 id="logo">Typographix</h1>
+        </div>
+        <div class="nav-right">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+        </div>
+    </nav>
+
+    <!-- Main Content -->
+    <main class="main">
+        <!-- Skeleton for Main featured article -->
+        <div class="skeleton featured-article-skeleton">
+            <div class="skeleton-image"></div>
+            <div class="skeleton-line skeleton-line--large"></div>
+            <div class="skeleton-line"></div>
+            <div class="skeleton-line"></div>
+            <div class="skeleton-line"></div>
+        </div>
+
+        <!-- Skeleton for smaller articles -->
+        <div class="smaller-articles">
+            <div class="skeleton article-skeleton">
+                <div class="skeleton-image"></div>
+                <div class="skeleton-line skeleton-line--large"></div>
+                <div class="skeleton-line"></div>
+                <div class="skeleton-line"></div>
+                <div class="skeleton-line"></div>
+            </div>
+            <div class="skeleton article-skeleton">
+                <div class="skeleton-image"></div>
+                <div class="skeleton-line skeleton-line--large"></div>
+                <div class="skeleton-line"></div>
+                <div class="skeleton-line"></div>
+                <div class="skeleton-line"></div>
+            </div>
+            <div class="skeleton article-skeleton">
+                <div class="skeleton-image"></div>
+                <div class="skeleton-line skeleton-line--large"></div>
+                <div class="skeleton-line"></div>
+                <div class="skeleton-line"></div>
+                <div class="skeleton-line"></div>
+            </div>
+        </div>
+
+
+        <!-- Main Featured Article -->
+        <div class="featured-article hidden">
+            <img src="https://unsplash.com/photos/PAB8jxMbcNg/download?ixid=M3wxMjA3fDB8MXxzZWFyY2h8Mnx8Y29tcHV0ZXIlMjBzZXR1cHxlbnwwfHx8fDE3MTM1NTIxMjh8MA&force=true&w=2400" alt="Computer Setup">
+            <h1>Enhancing Productivity: Revolutionizing Modern Workspaces</h1>
+            <p>The modern workspace is undergoing a transformation, driven by the need for greater productivity and efficiency. In today's fast-paced world, the ability to adapt and optimize...</p>
+            <a href="article1.html">Read More</a>
+        </div>
+        <!-- Three Smaller Article -->
+        <div class="smaller-articles">
+            <!-- Article 1 -->
+            <div class="article hidden">
+                <img src="https://unsplash.com/photos/zwd435-ewb4/download?ixid=M3wxMjA3fDB8MXxzZWFyY2h8MTB8fHJvYm90aWNzfGVufDB8fHx8MTcxMzUzMzg1Nnww&force=true&w=2400" alt="Robot Sitting">
+                <h2>Unveiling the Future: Quantum Leaps in Humanoid Robotics</h2>
+                <p>Humanoid robotics has been a field of continuous innovation, with each year bringing us closer to what was once science...</p>
+                <a href="article2.html">Read More</a>
+            </div>
+            <!-- Article 2 -->
+            <div class="article hidden">
+                <img src="https://unsplash.com/photos/pf7BliMKKxM/download?ixid=M3wxMjA3fDB8MXxzZWFyY2h8MjV8fGNvb2xpbmclMjBlbnRlcnByaXNlJTIwc2VydmVyfGVufDB8fHx8MTcxMzU1MzUxMHww&force=true&w=2400" alt="Server Setup">
+            
+                <h2>Diving Deep: Underwater Cooling Computer Hardware</h2>
+                <p>As computer hardware continues to advance, generating more heat, the need for innovative cooling solutions becomes...</p>
+                <a href="article3.html">Read More</a>
+            </div>
+            <!-- Article 3 -->
+            <div class="article hidden">
+                <img src="https://unsplash.com/photos/OMcBt38fGpQ/download?ixid=M3wxMjA3fDB8MXxzZWFyY2h8NTF8fHdpbmQlMjBtaWxsfGVufDB8fHx8MTcxMzU1MzY3OHww&force=true&w=2400" alt="Wind Turbines">
+                <h2>Harnessing the Breeze: The future of Wind Energy</h2>
+                <p>Wind energy has come a long way from traditional windmills. Today, towering turbines harness the power of the breeze on a massive scale. Innovations...</p>
+                <a href="article4.html">Read More</a>
+            </div>
+        </div>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <small>&copy; 2024 Typographix</small>
+        <div class="social-icons">
+            <a href="#"><i class="fa-brands fa-facebook" title="Facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-x-twitter" title="X (Twitter)"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram" title="Instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin-in" title="LinkedIn"></i></a>
+        </div>
+    </footer>
     <!-- Script -->
+    <script src="https://kit.fontawesome.com/64daa8f0b6.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
