added name to footer

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <!-- Footer -->
     <footer>
-        <small>&copy; 2024 Typographix</small>
+        <small>&copy; 2024 Typographix - Glen Popowich</small>
         <div class="social-icons">
             <a href="#"><i class="fa-brands fa-facebook" title="Facebook"></i></a>
             <a href="#"><i class="fa-brands fa-x-twitter" title="X (Twitter)"></i></a>
