--- a/article4.html
+++ b/article4.html
@@ -8,9 +8,7 @@
     <link rel="icon" type="image/png" href="https://www.google.com/s2/u/0/favicons?domain=jacinto.design">
     
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="scrollbar.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="article.css">
+    <link rel="stylesheet" href="css/compiled_style.css">
 </head>
 <body>
     <!-- Sticky Navbar -->
@@ -19,9 +17,13 @@
             <h1 id="logo">Typographix</h1>
         </div>
         <div class="nav-right">
-            <a href="/typographics-blog">Home</a>
+            <a href="/">Home</a>
             <a href="#">About</a>
             <a href="#">Contact</a>
+            <!-- Dark Mode Switch -->
+            <div id="theme-switcher" class="theme-switcher">
+                <i class="fas fa-sun"></i>
+            </div>
         </div>
     </nav>
 
